# QXlsx6

./: .gitignore  Example.md  HowToSetProject-cmake.md  HowToSetProject.md  QXlsx.pro  README.RU.md  README.md  TestEnv.md  ToDo.md  ToTest.md  WhatIsDone.md
ChartLineFill/: CMakeLists.txt  main.cpp
CombinedChart/: CMakeLists.txt  CombinedChart.pro  main.cpp
DateTime/: test.cpp
ExcelReading/: ExcelReading.pro  main.cpp
IssueTest/: test.cpp
Pump/: test.cpp
QXlsx/: CMakeLists.txt  QXlsx.pri  QXlsx.pro
QXlsx/header/: xlsxabstractooxmlfile.h  xlsxabstractooxmlfile_p.h  xlsxabstractsheet.h  xlsxabstractsheet_p.h  xlsxautofilter.h  xlsxaxis.h  xlsxcell.h  xlsxcell_p.h  xlsxcellformula.h  xlsxcellformula_p.h  xlsxcelllocation.h  xlsxcellrange.h  xlsxcellreference.h  xlsxchart.h  xlsxchart_p.h  xlsxchartsheet.h  xlsxchartsheet_p.h  xlsxcolor.h  xlsxconditionalformatting.h  xlsxconditionalformatting_p.h  xlsxcontenttypes_p.h  xlsxdatavalidation.h  xlsxdatavalidation_p.h  xlsxdatetype.h  xlsxdocpropsapp_p.h  xlsxdocpropscore_p.h  xlsxdocument.h  xlsxdocument_p.h  xlsxdrawing_p.h  xlsxdrawinganchor_p.h  xlsxeffect.h  xlsxfillformat.h  xlsxfont.h  xlsxformat.h  xlsxformat_p.h  xlsxglobal.h  xlsxheaderfooter.h  xlsxlabel.h  xlsxlayout.h  xlsxlegend.h  (+29 more)
QXlsx/source/: xlsxabstractooxmlfile.cpp  xlsxabstractsheet.cpp  xlsxautofilter.cpp  xlsxaxis.cpp  xlsxcell.cpp  xlsxcellformula.cpp  xlsxcelllocation.cpp  xlsxcellrange.cpp  xlsxcellreference.cpp  xlsxchart.cpp  xlsxchartsheet.cpp  xlsxcolor.cpp  xlsxconditionalformatting.cpp  xlsxcontenttypes.cpp  xlsxdatavalidation.cpp  xlsxdatetype.cpp  xlsxdocpropsapp.cpp  xlsxdocpropscore.cpp  xlsxdocument.cpp  xlsxdrawing.cpp  xlsxdrawinganchor.cpp  xlsxeffect.cpp  xlsxfillformat.cpp  xlsxfont.cpp  xlsxformat.cpp  xlsxheaderfooter.cpp  xlsxlabel.cpp  xlsxlayout.cpp  xlsxlegend.cpp  xlsxlineformat.cpp  xlsxmain.cpp  xlsxmarkerformat.cpp  xlsxmediafile.cpp  xlsxnumformatparser.cpp  xlsxpagemargins.cpp  xlsxpagesetup.cpp  xlsxrelationships.cpp  xlsxrichstring.cpp  xlsxseries.cpp  xlsxshapeformat.cpp  (+13 more)
ShowConsole/: main.cpp
TestExcel/: TestExcel.pro  autofilter.cpp  barchart.cpp  calendar.cpp  chart.cpp  chartextended.cpp  chartsheet.cpp  demo.cpp  formulas.cpp  hello.cpp  image.cpp  main.cpp  mergecells.cpp  pageMargins.cpp  rowcolumn.cpp
WebServer/: main.cpp
WhatType/: main.cpp
chartsquestions/: sat_calc.cpp
doc/: Doxyfile
doc/doxygen-awesome-css/: header.html
examples/: README.md  examples.md
examples/Autofilter/: Autofilter.pro  CMakeLists.txt  autofilter.cpp
examples/Calendar/: CMakeLists.txt  Calendar.pro  calendar.cpp
examples/ChartLineFill/: ChartLineFill.pro  main.cpp
examples/Charts/: CMakeLists.txt  Charts.pro  barchart.cpp  chart.cpp  chartextended.cpp  chartlinefill.cpp  labels.cpp  main.cpp
examples/Chartsheets/: CMakeLists.txt  Chartsheets.pro  chartsheet.cpp  main.cpp
examples/Chromatogram/: CMakeLists.txt  Chromatogram.pro  mainwindow.cpp  mainwindow.h  sat_calc.cpp  sat_calc.h  test.qrc
examples/CombinedChart/: CMakeLists.txt  CombinedChart.pro  main.cpp
examples/ConditionalFormatting/: CMakeLists.txt  ConditionalFormatting.pro  conditionalformatting.cpp
examples/DataValidation/: CMakeLists.txt  DataValidation.pro  datavalidation.cpp
examples/DefinedNames/: CMakeLists.txt  DefinedNames.pro  definedNames.cpp
examples/Demo/: CMakeLists.txt  Demo.pro  demo.cpp
examples/ExcelReading/: CMakeLists.txt  ExcelReading.pro  chartsheet1.xlsx  main.cpp  resource.qrc
examples/HelloAndroid/: HelloAndroid.pro  XlsxTableModel.cpp  main.cpp
examples/HelloWorld/: CMakeLists.txt  HelloWorld.pro  main.cpp
examples/Pump/: CMakeLists.txt  main.cpp  pump.pro  test.cpp
examples/ReadColor/: main.cpp
examples/SheetProtection/: CMakeLists.txt  SheetProtection.pro  main.cpp
examples/Sheets/: CMakeLists.txt  Sheets.pro  main.cpp  pageMargins.cpp
examples/ShowConsole/: CMakeLists.txt  ShowConsole.pro  main.cpp
examples/TestExcel/: CMakeLists.txt  TestExcel.pro  autofilter.cpp  barchart.cpp  chartextended.cpp  datavalidation.cpp  definename.cpp  demo.cpp  documentproperty.cpp  extlist.cpp  extlist.xlsx  extractdata.cpp  formulas.cpp  hello.cpp  image.cpp  main.cpp  numberformat.cpp  readStyle.cpp  resource.qrc  richtext.cpp  rowcolumn.cpp  style.cpp  worksheetoperations.cpp
examples/Types/: CMakeLists.txt  Types.pro  main.cpp
examples/WebServer/: CMakeLists.txt  WebServer.pro  main.cpp
